# crackle-kit

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bench_res/: rev_comp_simd.md
crates/crackle-kit/: Cargo.toml
crates/crackle-kit/benches/: bench1.rs  comp.rs  hashmap_mergezip.rs  rev_comp.rs  zerocopy_read.rs
crates/crackle-kit/src/: bam.rs  data.rs  err_opt_ext.rs  errors.rs  fastq.rs  lib.rs  macros.rs  memfd_file.rs  nuc_base_map.rs  option_ext.rs  pbar.rs  tracing.rs  tracing_kit.rs  utils.rs  zerocopy.rs
crates/crackle-kit/src/bam/: process.rs
crates/crackle-kit/src/data/: arc_string.rs  bases.rs  chrom.rs  data_with_index.rs  locus.rs  region.rs  variant.rs
crates/crackle-kit/src/data/bases/: comp.rs  rev_comp.rs
crates/crackle-kit/src/utils/: batch_region.rs  batched_channel.rs  batched_data.rs  binning.rs  pbar.rs  rounding.rs  traits.rs
crates/macros/: Cargo.toml
crates/macros/macro_impl/: Cargo.toml
crates/macros/macro_impl/src/: expand.rs  lib.rs
crates/macros/src/: lib.rs
src/: lib.rs  tracing.rs
