[workspace]
resolver = "3"
members = ["crates/*", "crates/macros/macro_impl"]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
macros = { path = "crates/macros" }
macro_impl = { path = "crates/macros/macro_impl" }
paste = "1.0.15"
nix = { version = "0.29.0", features = ["fs"] }
flate2 = { version = "1.1.1", features = ["zlib-rs"], default-features = false }
crossbeam-channel = { version = "0.5.15" }

[profile.dev]
incremental = true

[profile.release]
lto = 'thin'
debug = "line-tables-only"

[profile.debug-release]
inherits = "release"
debug = true

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
debug = false
