[package]
name = "crackle-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
macros = { workspace = true }
paste = { workspace = true }
nix = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
indicatif = { workspace = true }
rust-htslib = { git = "https://github.com/Crispy13/rust-htslib", branch = "dev", optional = true }
bio = { version = "3.0.0", optional = true }
rayon = { version = "1.11.0", optional = true }

[features]
memfd = ["dep:nix"]
fastq = ["dep:flate2"]
htslib = ["dep:rust-htslib"]
bio = ["dep:bio"]
bam = ["dep:rust-htslib", "dep:rayon"]
