[package]
name = "crackle-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { workspace = true }
paste = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true, optional=true }
tracing-appender = { workspace = true, optional=true }
tracing-subscriber = { workspace = true, optional=true }
nix = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
indicatif = { workspace = true, optional = true }
rust-htslib = { git = "https://github.com/Crispy13/rust-htslib", branch = "dev", optional = true }
bio = { version = "3.0.0", optional = true }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.9.2"

[features]
memfd = ["dep:nix"]
fastq = ["dep:flate2"]
htslib = ["dep:rust-htslib"]
bio = ["dep:bio"]
bam = ["dep:rust-htslib", "rust-htslib/libdeflate", "dep:rayon"]
pbar = ["dep:indicatif"]
tracing = ["dep:tracing"]


[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "hashmap_mergezip"
harness = false