[package]
name = "crackle-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = { workspace = true, optional = true }

anyhow = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
rust-htslib = { git = "https://github.com/Crispy13/rust-htslib", branch = "dev", optional = true }
bio = { version = "3.0.0", optional = true }
rayon = { version = "1.11.0", optional = true }

# macros = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.9.2"

[features]
default = []
memfd = ["dep:nix"]
fastq = ["dep:flate2"]
htslib = ["dep:rust-htslib"]
batch-work = ["dep:crossbeam-channel"]
bio = ["dep:bio"]
bam = ["dep:rust-htslib", "rust-htslib/libdeflate", "dep:rayon", "tracing", "pbar", "batch-work"]
pbar = ["dep:indicatif"]
tracing = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
macros = ["dep:paste"]


[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "hashmap_mergezip"
harness = false
